crates/analyzer/tests/snapshots/errors__array_non_primitive.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `Array` element type must be a primitive type
  ┌─ [snippet]:3:16
  │
3 │   let x: Array<(u8, u8), 10>
  │                ^^^^^^^^ this has type `(u8, u8)`; expected a primitive type


